<resources>
    <string name="app_name">SandromochApp</string>
    <string name="http_not_valid_response_object">Unable to get response from server. Please, try again</string>
    <string name="http_bad_request">Bad Request</string>
    <string name="http_forbidden">Forbidden</string>
    <string name="http_not_found">Not Found</string>
    <string name="http_server_error">Internal Server Error</string>
    <string name="title_activity_sandromoch">SandromochActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">САНДОРМОХ</string>
    <string name="sub_title">МЕМОРИАЛЬНЫЙ КОМПЛЕКС</string>
    <string name="memorial_complex">МЕМОРИАЛЬНЫЙ КОМПЛЕКС</string>
    <string name="memorials_map">КАРТА ПАМЯТНИКОВ</string>
    <string name="members_days">ДНИ ПАМЯТИ</string>
    <string name="how_to_get">КАК ДОБРАТЬСЯ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="all">Все</string>
    <string name="private_">Личные</string>
    <string name="group">Коллективные</string>
</resources>
